kong/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: kong
spec:
  ingressClassName: kong  # Tell Kubernetes to use Kong as the Ingress controller
  rules:
    - host: api.tg-backend.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-proxy
                port:
                  number: 443  # Use port 443 for HTTPS traffic
  tls:
    - hosts:
        - api.tg-backend.com
      secretName: kong-tls
